--- a/src/components/ExperienceBlock.css
+++ b/src/components/ExperienceBlock.css
@@ -1,82 +1,73 @@
-.experience-container {
-  display: flex;
-  align-items: flex-start;
-  padding: 16px 24px;
-  margin: 16px 0;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  transition: transform 0.3s, box-shadow 0.3s;
-  background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
+/* ExperienceBlock.css */
+.experience-block {
   position: relative;
   overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
-.experience-container:hover {
-  transform: scale(1.02);
+.experience-block:hover {
+  transform: translateY(-10px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .experience-image-container {
-  flex-shrink: 0;
-  margin-right: 16px; /* Space between image and text */
+  position: relative;
+  width: 100%;
+  height: 350px; /* Fixed height for the container */
+  background-color: white; /* Fill gaps with black background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .experience-image {
-  width: 150px;
-  height: 150px;
-  border-radius: 8px;
-  object-fit: cover;
-  transition: transform 0.3s;
+  max-width: 95%;
+  max-height: 85%;
+  object-fit: contain; /* Ensure the image maintains its aspect ratio */
 }
 
-.experience-info {
-  flex-grow: 1;
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.experience-title {
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #333;
-  text-decoration: none;
-  margin-bottom: 8px;
-  display: block;
+.experience-block:hover .overlay {
+  opacity: 1;
 }
 
-.experience-info p {
-  margin: 4px 0;
-  color: #555;
+
+.experience-description {
+  font-size: 1rem;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
-.github-icon {
-  margin-top: 8px;
-  display: inline-block;
-  color: #333;
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-@media (max-width: 768px) {
-  .experience-container {
-    flex-direction: column;
-    align-items: center;
-    padding: 16px;
-  }
-
-  .experience-image-container {
-    margin-right: 0;
-    margin-bottom: 16px; /* Space between image and text on mobile */
-  }
-
-  .experience-image {
-    width: 100%;
-    height: auto;
-  }
-
-  .experience-info {
-    text-align: center;
-  }
-
-  .github-icon {
-    margin-top: 16px;
-  }
+.tag {
+  background: #0073e6;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 10px;
+  margin: 5px;
+  font-size: 0.875rem;
 }
