--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -12,7 +12,7 @@ nav {
 .nav-links {
   list-style: none;
   margin: 0;
-  padding: 0 2rem 0 0; /* Adjust this value to shift left */
+  padding: 0 2rem 0 0;
   display: flex;
 }
 
