--- a/src/components/ProjectDetail.css
+++ b/src/components/ProjectDetail.css
@@ -1,3 +1,4 @@
+/* ProjectDetail.css */
 .project-detail-container {
   padding: 40px;
   max-width: 800px;
@@ -26,11 +27,6 @@ h3 {
 p {
   font-size: 1rem;
   line-height: 1.6;
-}
-
-ul {
-  list-style-type: disc;
-  padding-left: 20px;
 }
 
 a {
