--- a/src/pages/Experience.css
+++ b/src/pages/Experience.css
@@ -1,59 +1,67 @@
-/* General styles for the Experience page */
-body {
-  margin: 0;
-  font-family: "Open Sans", serif;
-  background-color: #edfffe;
+/* Experience.css */
+.experience-page {
+  padding: 100px 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center; /* Center align the content */
 }
 
-.container {
-  display: grid;
-  grid-template-columns: 200px 1fr;
-  height: calc(100vh - 60px); /* Adjust height to account for Navbar and Banner */
-}
-
-.sidebar {
-  background-color: #fff;
-  padding: 20px;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-}
-
-.sidebar img {
-  width: 100px;
-  height: auto;
-  display: block;
-  margin: 0 auto 20px auto;
-}
-
-.sidebar ul {
-  list-style: none;
-  padding: 0;
-}
-
-.sidebar ul li {
-  margin: 20px 0;
-  font-size: 1.2rem;
-  text-align: center;
-  cursor: pointer;
-}
-
-.sidebar ul li.active {
-  color: #000;
-}
-
-.sidebar ul li.inactive {
-  color: #888;
-}
-
-.sidebar ul li:hover {
-  color: #333;
-}
-
-.content {
-  padding: 40px;
-}
-
-.content h1 {
-  font-size: 2.5rem;
-  color: #333;
+.title-nav-container {
   margin-bottom: 40px;
+}
+
+.experience-title {
+  font-size: 2rem;
+  padding: 5px;
+  margin-bottom: 20px; /* Adjust margin for spacing */
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.experience-title.transitioning {
+  opacity: 0;
+  transform: translateY(-10px);
+}
+
+.category-nav {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  gap: 10px; /* Space between buttons */
+  margin-bottom: 40px;
+  font-weight: 400;
+}
+
+.category-nav button {
+  background: none;
+  border: none;
+  padding: 10px 20px;
+  margin: 0 5px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: color 0.3s ease;
+  position: relative;
+  z-index: 1;
+}
+
+.category-nav .slider {
+  position: absolute;
+  bottom: 0;
+  height: 3px;
+  background-color: #0073e6;
+  transition: all 0.3s ease;
+  z-index: 0;
+}
+
+.category-nav button.active,
+.category-nav button:hover {
+  color: #0073e6;
+}
+.category-nav button.active{
+  font-weight: 600;
+}
+.experience-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Two columns */
+  gap: 20px;
+  grid-auto-rows: minmax(100px, auto); /* Flexible row heights */
 }
