--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,22 @@ body {
 }
 
 .App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   text-align: center;
 }
+
+.NavBar,
+.AboutSection {
+  flex: 1;
+}
+
+.content {
+  flex: 1;
+  padding-bottom: 20px; /* Adjust this value if necessary to fit the height of the footer bar */
+}
+
 
 .App-header {
   display: flex;
