--- a/src/components/ProjectDetail.css
+++ b/src/components/ProjectDetail.css
@@ -1,42 +1,83 @@
 /* ProjectDetail.css */
+.project-detail-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Ensure it is above other content */
+}
+
 .project-detail-container {
+  background: white;
   padding: 40px;
-  max-width: 800px;
-  margin: 0 auto;
-  background: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-}
-
-.project-detail-image {
+  border-radius: 15px;
+  max-width: 600px;
   width: 100%;
-  height: auto;
-  border-radius: 8px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  position: relative;
+  font-family: 'Arial', sans-serif;
+  text-align: center;
 }
 
-h1 {
-  font-size: 2.5rem;
-  margin-bottom: 20px;
-}
-
-h3 {
+.project-detail-container .close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
   font-size: 1.5rem;
-  margin-top: 20px;
+  cursor: pointer;
+  color: #333;
 }
 
-p {
-  font-size: 1rem;
-  line-height: 1.6;
+.project-detail-container h2 {
+  margin-top: 0;
+  font-size: 2rem;
+  color: #333;
 }
 
-a {
-  display: block;
-  margin-top: 20px;
+.project-detail-container .role,
+.project-detail-container .duration,
+.project-detail-container .description {
+  font-size: 1.2rem;
+  margin: 10px 0;
+  color: #555;
+}
+
+.project-detail-container .links {
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px; /* Space between icons */
+}
+
+.project-detail-container .links a {
   color: #0073e6;
+  font-size: 1.5rem;
+  display: inline-flex;
+  align-items: center;
   text-decoration: none;
-  font-weight: bold;
 }
 
-a:hover {
-  text-decoration: underline;
+.project-detail-container .links a:hover {
+  color: #005bb5;
 }
+
+.project-detail-container .links a i,
+.project-detail-container .links a svg {
+  width: 24px; /* Ensure same size */
+  height: 24px; /* Ensure same size */
+  display: inline-block;
+  vertical-align: middle; /* Ensure alignment */
+}
+
+.project-detail-container .links a svg path {
+  fill: currentColor; /* Make SVG color inherit from parent */
+}
+
