--- a/src/components/ExperienceBlock.css
+++ b/src/components/ExperienceBlock.css
@@ -1,73 +1,173 @@
-/* ExperienceBlock.css */
 .experience-block {
-  position: relative;
-  overflow: hidden;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s, box-shadow 0.3s;
+	position: relative;
+	overflow: hidden;
+	border-radius: 10px;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	transition: transform 0.3s, box-shadow 0.3s;
+	cursor: pointer;
+	margin-bottom: 20px;
+	background-color: #f8f9fa; /* Light gray background color */
+	padding: 0; /* Remove padding */
+	box-sizing: border-box; /* Ensure padding and borders are included in the element's total width and height */
 }
 
 .experience-block:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+	transform: translateY(-10px);
+	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-.experience-image-container {
-  position: relative;
-  width: 100%;
-  height: 350px; /* Fixed height for the container */
-  background-color: white; /* Fill gaps with black background */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
+.experience-block .experience-image-container {
+	position: relative;
+	height: 350px; /* Fixed height for the container */
+	background-color: white; /* Fill gaps with white background */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
 }
 
-.experience-image {
-  max-width: 95%;
-  max-height: 85%;
-  object-fit: contain; /* Ensure the image maintains its aspect ratio */
+.experience-block .experience-image {
+	max-width: 95%;
+	max-height: 85%;
+	object-fit: contain; /* Ensure the image maintains its aspect ratio */
 }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.7);
-  color: white;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+.experience-block .experience-content {
+	display: none; /* Hide content on desktop */
+	padding: 10px;
+	text-align: left;
+}
+
+.experience-block .overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(0, 0, 0, 0.7);
+	color: white;
+	opacity: 0;
+	transition: opacity 0.3s ease;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 }
 
 .experience-block:hover .overlay {
-  opacity: 1;
+	opacity: 1;
 }
 
-
-.experience-description {
-  font-size: 1rem;
-  margin-bottom: 10px;
-  padding: 10px;
+.experience-block .experience-title {
+	font-size: 2rem;
+	margin: 10px 0;
 }
 
-.tags {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.experience-block .experience-description {
+	font-size: 1rem;
+	margin-bottom: 10px;
 }
 
-.tag {
-  background: #0073e6;
-  color: white;
-  border-radius: 5px;
-  padding: 5px 10px;
-  margin: 5px;
-  font-size: 0.875rem;
+.experience-block .tags {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.experience-block .tag {
+	background: #0073e6;
+	color: white;
+	border-radius: 5px;
+	padding: 5px 10px;
+	margin: 5px;
+	font-size: 0.875rem;
+}
+
+/* Modal styles */
+.modal {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+	background-color: #fefefe;
+	margin: 15% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
+	max-width: 500px;
+	border-radius: 5px;
+	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+	text-align: left;
+}
+
+.close-button {
+	color: #aaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+/* Media Query for Mobile Devices */
+@media (max-width: 768px) {
+	.experience-block {
+		background-color: #f8f9fa; /* Light gray background color */
+		padding: 10px; /* Add padding */
+		margin: 0 8px; /* Add margin to avoid padding overflow */
+	}
+
+	.experience-block .experience-content {
+		display: block; /* Show content on mobile */
+	}
+
+	.experience-block .overlay {
+		display: none; /* Hide overlay on mobile */
+	}
+
+	.experience-block .experience-image-container {
+		height: auto; /* Adjust height for mobile */
+		padding: 10px; /* Add padding for the image on mobile */
+	}
+
+	.experience-block .experience-image {
+		width: 100%;
+		height: auto;
+		max-width: 90%; /* Make image smaller on mobile */
+		max-height: 200px; /* Set a maximum height for the image on mobile */
+	}
+
+	.experience-content .experience-title {
+		font-size: 1rem; /* Smaller font size for mobile */
+	}
+
+	.experience-block .experience-description {
+		font-size: 0.875rem; /* Smaller font size for mobile */
+	}
+
+	.experience-block .tag {
+		font-size: 0.75rem; /* Smaller font size for tags on mobile */
+		padding: 3px 8px; /* Adjust padding for tags */
+	}
+
+	.modal-content {
+		margin: 5% auto;
+		width: 90%;
+	}
 }
